PostgreSQL работает (и в Docker и локально)
